--- a/package.json
+++ b/package.json
@@ -35,12 +35,13 @@
   "dependencies": {
     "@typescript-eslint/eslint-plugin": "^5.59.11",
     "@typescript-eslint/parser": "^5.59.11",
-    "cookie-parser": "^1.4.6",
     "bcrypt": "^5.1.0",
+    "cookie-parser": "^1.4.6",
     "cors": "^2.8.5",
     "dotenv": "^16.1.4",
     "eslint": "^8.42.0",
     "express": "^4.18.2",
+    "http-status": "^1.6.2",
     "jsonwebtoken": "^9.0.1",
     "mongoose": "^7.3.0",
     "winston": "^3.9.0",
